--- a/about.html
+++ b/about.html
@@ -48,7 +48,12 @@
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu">
-                                    <a href="skill.html" class="dropdown-item">Skills</a>
+                                    <a href="#" class="dropdown-item">Technologies</a>
+                                    <a href="#" class="dropdown-item">Blog</a>
+                                    <a href="#" class="dropdown-item">Clients</a>
+                                    <a href="#" class="dropdown-item">Careers</a>
+                                    <a href="#" class="dropdown-item">Events</a>
+                                    <a href="#" class="dropdown-item">News</a>
                                     
                                 </div>
                             </div>
@@ -123,20 +128,22 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 footer-links">
                             <h4>About Us</h4>
-                            <ul>
-                                <li><i class="ion-ios-arrow-forward"></i> <a href="index.html">Home</a></li>
+                            <ul> <li><i class="ion-ios-arrow-forward"></i> <a href="index.html">Home</a></li>
                                 <li><i class="ion-ios-arrow-forward"></i> <a href="about.html">About us</a></li>
+                                <li><i class="ion-ios-arrow-forward"></i> <a href="#">Careers</a></li>
                                 <li><i class="ion-ios-arrow-forward"></i> <a href="service.html">Our services</a></li>
                                 <li><i class="ion-ios-arrow-forward"></i> <a href="#">Terms & condition</a></li>
                                 <li><i class="ion-ios-arrow-forward"></i> <a href="#">Privacy policy</a></li>
+                              
                             </ul>
                         </div>
-
                         <div class="col-lg-3 col-md-6 footer-links">
                             <h4>Useful Links</h4>
                             <ul>
                                 <li><i class="ion-ios-arrow-forward"></i> <a href="index.html">Our Brand</a></li>
-                                <li><i class="ion-ios-arrow-forward"></i> <a href="skill.html">Skills</a></li>
+                                <li><i class="ion-ios-arrow-forward"></i> <a href="#">Technologies</a></li>
+                                <li><i class="ion-ios-arrow-forward"></i> <a href="#">Blog</a></li>
+                                <li><i class="ion-ios-arrow-forward"></i> <a href="#">Clients</a></li>
                                 <li><i class="ion-ios-arrow-forward"></i> <a href="#">Events</a></li>
                                 <li><i class="ion-ios-arrow-forward"></i> <a href="#">News</a></li>
                             </ul>
